@@ -4,7 +4,8 @@ zeit.content.article changes
 2.9.4 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Update to use etree instead of objectify for HTML conversion/wysiwyg
+  (via #10027).
 
 
 2.9.3 (2011-11-24)
